@@ -16,7 +16,7 @@ package org.onebusaway.gtfs_transformer.impl;
 import java.io.*;
 import java.net.URL;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.text.SimpleDateFormat;
 import java.util.*;
 import org.onebusaway.csv_entities.CSVLibrary;
@@ -165,8 +165,8 @@ public class AnomalyCheckFutureTripCounts implements GtfsTransformStrategy {
 
     _log.info(out);
     try {
-      Files.deleteIfExists(Paths.get(dayAvgTripMapFile));
-      Files.write(Paths.get(dayAvgTripMapFile), out.getBytes());
+      Files.deleteIfExists(Path.of(dayAvgTripMapFile));
+      Files.write(Path.of(dayAvgTripMapFile), out.getBytes());
     } catch (IOException io) {
       _log.error(io.getMessage());
     }
@@ -288,7 +288,7 @@ public class AnomalyCheckFutureTripCounts implements GtfsTransformStrategy {
 
     @Override
     public void handleLine(List<String> list) throws Exception {
-      inputSet.add(dateFormatter.parse(list.get(0)));
+      inputSet.add(dateFormatter.parse(list.getFirst()));
     }
 
     Collection<Date> returnContents() {
@@ -301,7 +301,7 @@ public class AnomalyCheckFutureTripCounts implements GtfsTransformStrategy {
 
     @Override
     public void handleLine(List<String> list) {
-      inputMap.put(list.get(0), Double.parseDouble(list.get(1)));
+      inputMap.put(list.getFirst(), Double.parseDouble(list.get(1)));
     }
 
     Map<String, Double> returnContents() {
